# src/app/Http/Controllers/ResourceController.php
@@ -5,15 +5,15 @@ namespace App\Http\Controllers;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
 use Illuminate\Support\Facades\Validator;
-use App\Organisation;
+use App\Resource;
 
-class OrganisationController extends Controller
+class ResourceController extends Controller
 {
         /**
      * @SWG\Get(
-     *   tags={"Organisations"},
-     *   path="/api/organisations",
-     *   summary="Return all organisations",
+     *   tags={"Resources"},
+     *   path="/api/resources",
+     *   summary="Return all resources",
      *   operationId="index",
      *   @SWG\Response(response=200, description="successful operation"),
      *   @SWG\Response(response=406, description="not acceptable"),
@@ -23,14 +23,14 @@ class OrganisationController extends Controller
      */
     public function index()
     {
-        return Organisation::all();
+        return Resource::all();
     }
 
      /**
      * @SWG\Get(
-     *   tags={"Organisations"},
-     *   path="/api/organisations/{id}",
-     *   summary="Show organisation info ",
+     *   tags={"Resources"},
+     *   path="/api/resources/{id}",
+     *   summary="Show resource info ",
      *   operationId="show",
      *   @SWG\Response(response=200, description="successful operation"),
      *   @SWG\Response(response=406, description="not acceptable"),
@@ -41,75 +41,75 @@ class OrganisationController extends Controller
 
     public function show($id)
     {
-        return Organisation::find($id);
+        return Resource::find($id);
     }
 
     /**
      * @SWG\Post(
-     *   tags={"Organisations"},
-     *   path="/api/organisations",
-     *   summary="Create organisation",
+     *   tags={"Resources"},
+     *   path="/api/resources",
+     *   summary="Create resource",
      *   operationId="store",
      *   @SWG\Parameter(
-     *     name="name",
+     *     name="organisation_id",
      *     in="query",
-     *     description="Organisation name.",
+     *     description="Resource organisation id.",
      *     required=true,
      *     type="string"
      *   ),
      *   @SWG\Parameter(
-     *     name="website",
+     *     name="name",
      *     in="query",
-     *     description="Organisation website.",
+     *     description="Resource name.",
      *     required=true,
      *     type="string"
      *   ),
      *  @SWG\Parameter(
-     *     name="contact_person",
+     *     name="type",
      *     in="query",
-     *     description="Organisation Contact Person.",
+     *     description="Resource type.",
      *     required=true,
      *     type="string"
      *   ),
      *   @SWG\Parameter(
-     *     name="email",
+     *     name="quantity",
      *     in="query",
-     *     description="Organisation email.",
-     *     required=true,
-     *     type="string"
-     *   ),
-     *   @SWG\Parameter(
-     *     name="phone",
-     *     in="query",
-     *     description="Organisation phone.",
+     *     description="Resource quantity.",
      *     required=true,
      *     type="string"
      *   ),
      *  @SWG\Parameter(
      *     name="county",
      *     in="query",
-     *     description="Organisation county.",
+     *     description="Resource county.",
      *     required=true,
      *     type="string"
      *   ),
      *  @SWG\Parameter(
      *     name="city",
      *     in="query",
-     *     description="Organisation city.",
+     *     description="Resource city.",
      *     required=true,
      *     type="string"
      *   ),
      *  @SWG\Parameter(
      *     name="address",
      *     in="query",
-     *     description="Organisation address.",
+     *     description="Resource address.",
      *     required=false,
      *     type="string"
      *   ),
      *   @SWG\Parameter(
      *     name="comments",
      *     in="query",
-     *     description="Organisation comments.",
+     *     description="Resource comments.",
+     *     required=false,
+     *     type="string"
+     *   ),
+     *   @SWG\Parameter(
+     *     name="added_by",
+     *     in="query",
+     *     description="Resource added by.",
      *     required=false,
      *     type="string"
      *   ),
@@ -123,10 +123,8 @@ class OrganisationController extends Controller
     {
         $validator = Validator::make($request->all(), [
             'name' => 'required|string|max:255',
-            'website' => 'required|max:255',
-            'contact_person' => 'required|string|max:255',
-            'email' => 'required|string|email|max:255|unique:users',
-            'phone' => 'required|string|min:6|',
+            'type' => 'required|string',
+            'quantity' => 'required|string',
             'county' => 'required|string|min:4|',
             'city' => 'required|string|min:4|'
         ]);
@@ -135,15 +133,15 @@ class OrganisationController extends Controller
             return response(['errors'=>$validator->errors()->all()], 400);
         }
         
-        $organisation = Organisation::create($request->all());
-        return response()->json($organisation, 201); 
+        $resource = Resource::create($request->all());
+        return response()->json($resource, 201); 
     }
 
     /**
      * @SWG\put(
-     *   tags={"Organisations"},
-     *   path="/api/organisations/{id}",
-     *   summary="Update organisation",
+     *   tags={"Resources"},
+     *   path="/api/resources/{id}",
+     *   summary="Update resource",
      *   operationId="update",
      *   @SWG\Response(response=200, description="successful operation"),
      *   @SWG\Response(response=406, description="not acceptable"),
@@ -154,17 +152,17 @@ class OrganisationController extends Controller
 
     public function update(Request $request, $id)
     {
-        $organisation = Organisation::findOrFail($id);
-        $organisation->update($request->all());
+        $resource = Resource::findOrFail($id);
+        $resource->update($request->all());
 
-        return $organisation;
+        return $resource;
     }
 
     /**
      * @SWG\Delete(
-     *   tags={"Organisations"},
-     *   path="/api/organisations/{id}",
-     *   summary="Delete organisation",
+     *   tags={"Resources"},
+     *   path="/api/resources/{id}",
+     *   summary="Delete resource",
      *   operationId="delete",
      *   @SWG\Response(response=200, description="successful operation"),
      *   @SWG\Response(response=406, description="not acceptable"),
@@ -175,10 +173,10 @@ class OrganisationController extends Controller
 
     public function delete(Request $request, $id)
     {
-        $organisation = Organisation::findOrFail($id);
-        $organisation->delete();
+        $resource = Resource::findOrFail($id);
+        $resource->delete();
 
-        $response = array("message" => 'Organisation deleted.');
+        $response = array("message" => 'Resource deleted.');
 
         return response()->json($response, 200);
     }
