# src/storage/api-docs/api-docs.json
@@ -8,6 +8,9 @@
     "paths": {
         "/api/register": {
             "post": {
+                "tags": [
+                    "Auth"
+                ],
                 "summary": "Register user",
                 "operationId": "register",
                 "parameters": [
@@ -69,6 +72,9 @@
         },
         "/api/login": {
             "post": {
+                "tags": [
+                    "Auth"
+                ],
                 "summary": "User login",
                 "operationId": "login",
                 "parameters": [
@@ -102,6 +108,9 @@
         },
         "/api/logout": {
             "get": {
+                "tags": [
+                    "Auth"
+                ],
                 "summary": "User logout",
                 "operationId": "logout",
                 "responses": {
@@ -119,6 +128,9 @@
         },
         "/api/profile": {
             "get": {
+                "tags": [
+                    "Auth"
+                ],
                 "summary": "Get user profile",
                 "operationId": "profile",
                 "responses": {
@@ -134,8 +146,135 @@
                 }
             }
         },
+        "/api/courses": {
+            "get": {
+                "tags": [
+                    "Courses"
+                ],
+                "summary": "Return all courses",
+                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Courses"
+                ],
+                "summary": "Create course",
+                "operationId": "store",
+                "parameters": [
+                    {
+                        "name": "volunteer_id",
+                        "in": "query",
+                        "description": "Course volunteer id.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "Course name.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "ssn",
+                        "in": "query",
+                        "description": "Course acredited.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "Course obatained.",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/api/courses/{id}": {
+            "get": {
+                "tags": [
+                    "Courses"
+                ],
+                "summary": "Show course info ",
+                "operationId": "show",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Courses"
+                ],
+                "summary": "Update course",
+                "operationId": "update",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Courses"
+                ],
+                "summary": "Delete course",
+                "operationId": "delete",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
         "/api/organisations": {
             "get": {
+                "tags": [
+                    "Organisations"
+                ],
                 "summary": "Return all organisations",
                 "operationId": "index",
                 "responses": {
@@ -151,6 +290,9 @@
                 }
             },
             "post": {
+                "tags": [
+                    "Organisations"
+                ],
                 "summary": "Create organisation",
                 "operationId": "store",
                 "parameters": [
@@ -197,9 +339,9 @@
                         "type": "string"
                     },
                     {
-                        "name": "locality",
+                        "name": "city",
                         "in": "query",
-                        "description": "Organisation locality.",
+                        "description": "Organisation city.",
                         "required": true,
                         "type": "string"
                     },
@@ -233,6 +375,9 @@
         },
         "/api/organisations/{id}": {
             "get": {
+                "tags": [
+                    "Organisations"
+                ],
                 "summary": "Show organisation info ",
                 "operationId": "show",
                 "responses": {
@@ -248,6 +393,9 @@
                 }
             },
             "put": {
+                "tags": [
+                    "Organisations"
+                ],
                 "summary": "Update organisation",
                 "operationId": "update",
                 "responses": {
@@ -263,7 +411,342 @@
                 }
             },
             "delete": {
+                "tags": [
+                    "Organisations"
+                ],
                 "summary": "Delete organisation",
+                "operationId": "delete",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/api/resources": {
+            "get": {
+                "tags": [
+                    "Resources"
+                ],
+                "summary": "Return all resources",
+                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Resources"
+                ],
+                "summary": "Create resource",
+                "operationId": "store",
+                "parameters": [
+                    {
+                        "name": "organisation_id",
+                        "in": "query",
+                        "description": "Resource organisation id.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "Resource name.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "type",
+                        "in": "query",
+                        "description": "Resource type.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "quantity",
+                        "in": "query",
+                        "description": "Resource quantity.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "county",
+                        "in": "query",
+                        "description": "Resource county.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "city",
+                        "in": "query",
+                        "description": "Resource city.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address",
+                        "in": "query",
+                        "description": "Resource address.",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "comments",
+                        "in": "query",
+                        "description": "Resource comments.",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "added_by",
+                        "in": "query",
+                        "description": "Resource added by.",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/api/resources/{id}": {
+            "get": {
+                "tags": [
+                    "Resources"
+                ],
+                "summary": "Show resource info ",
+                "operationId": "show",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Resources"
+                ],
+                "summary": "Update resource",
+                "operationId": "update",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Resources"
+                ],
+                "summary": "Delete resource",
+                "operationId": "delete",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/api/volunteers": {
+            "get": {
+                "tags": [
+                    "Volunteers"
+                ],
+                "summary": "Return all volunteers",
+                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Volunteers"
+                ],
+                "summary": "Create volunteer",
+                "operationId": "store",
+                "parameters": [
+                    {
+                        "name": "organisation_id",
+                        "in": "query",
+                        "description": "Volunteer organisation id.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "Volunteer name.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "ssn",
+                        "in": "query",
+                        "description": "Volunteer ssn.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "Volunteer email.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "phone",
+                        "in": "query",
+                        "description": "Volunteer phone.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "county",
+                        "in": "query",
+                        "description": "Volunteer county.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "city",
+                        "in": "query",
+                        "description": "Volunteer city.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address",
+                        "in": "query",
+                        "description": "Volunteer address.",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "comments",
+                        "in": "query",
+                        "description": "Volunteer comments.",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "job",
+                        "in": "query",
+                        "description": "Volunteer job.",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "added_by",
+                        "in": "query",
+                        "description": "Volunteer added by.",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/api/volunteers/{id}": {
+            "get": {
+                "tags": [
+                    "Volunteers"
+                ],
+                "summary": "Show volunteer info ",
+                "operationId": "show",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Volunteers"
+                ],
+                "summary": "Update volunteer",
+                "operationId": "update",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Volunteers"
+                ],
+                "summary": "Delete volunteer",
                 "operationId": "delete",
                 "responses": {
                     "200": {
